src/controllers/antlr4/MyParser.js
// Generated from MyParser.g4 by ANTLR 4.8
// jshint ignore: start
var antlr4 = require('antlr4/index');
var MyParserListener = require('./MyParserListener').MyParserListener;
var MyParserVisitor = require('./MyParserVisitor').MyParserVisitor;

var grammarFileName = "MyParser.g4";




var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, null, null, null, "';'", "'}'", "'{'", "')'", 
                     "'('", "']'", "'['", "'='", "','", "'.'", "'while'", 
                     "'if'", "'class'", "'return'", "'else'", "'print'", 
                     "'and'", "'or'", "'new'", "'length'" ];

var symbolicNames = [ null, "COMMENT", "LINE_COMMENT", "Space", "Semicolon", 
                      "RightCurlyBracket", "LeftCurlyBracket", "RightParenthesis", 
                      "LeftParenthesis", "RightBracket", "LeftBracket", 
                      "Equals", "Comma", "Dot", "While", "If", "Class", 
                      "Return", "Else", "Print", "And", "Or", "New", "Length", 
                      "SimpleType", "ArrayType", "RelationalOperation", 
                      "AdditiveOperation", "MultiplicativeOperation", "Literal", 
                      "Identifier", "Unary" ];

var ruleNames =  [ "program", "statement", "block", "functionDeclaration", 
                   "formalParams", "formalParam", "whileStatement", "ifStatement", 
                   "returnStatement", "printStatement", "classDeclaration", 
                   "classVariableDeclaration", "variableDeclaration", "type", 
                   "assignment", "arrayAssignment", "expression", "simpleExpression", 
                   "term", "factor", "unary", "subExpression", "allocationExpression", 
                   "arrayAllocationExpression", "arrayLookup", "functionCall", 
                   "actualParams" ];

function MyParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

MyParser.prototype = Object.create(antlr4.Parser.prototype);
MyParser.prototype.constructor = MyParser;

Object.defineProperty(MyParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

MyParser.EOF = antlr4.Token.EOF;
MyParser.COMMENT = 1;
MyParser.LINE_COMMENT = 2;
MyParser.Space = 3;
MyParser.Semicolon = 4;
MyParser.RightCurlyBracket = 5;
MyParser.LeftCurlyBracket = 6;
MyParser.RightParenthesis = 7;
MyParser.LeftParenthesis = 8;
MyParser.RightBracket = 9;
MyParser.LeftBracket = 10;
MyParser.Equals = 11;
MyParser.Comma = 12;
MyParser.Dot = 13;
MyParser.While = 14;
MyParser.If = 15;
MyParser.Class = 16;
MyParser.Return = 17;
MyParser.Else = 18;
MyParser.Print = 19;
MyParser.And = 20;
MyParser.Or = 21;
MyParser.New = 22;
MyParser.Length = 23;
MyParser.SimpleType = 24;
MyParser.ArrayType = 25;
MyParser.RelationalOperation = 26;
MyParser.AdditiveOperation = 27;
MyParser.MultiplicativeOperation = 28;
MyParser.Literal = 29;
MyParser.Identifier = 30;
MyParser.Unary = 31;

MyParser.RULE_program = 0;
MyParser.RULE_statement = 1;
MyParser.RULE_block = 2;
MyParser.RULE_functionDeclaration = 3;
MyParser.RULE_formalParams = 4;
MyParser.RULE_formalParam = 5;
MyParser.RULE_whileStatement = 6;
MyParser.RULE_ifStatement = 7;
MyParser.RULE_returnStatement = 8;
MyParser.RULE_printStatement = 9;
MyParser.RULE_classDeclaration = 10;
MyParser.RULE_classVariableDeclaration = 11;
MyParser.RULE_variableDeclaration = 12;
MyParser.RULE_type = 13;
MyParser.RULE_assignment = 14;
MyParser.RULE_arrayAssignment = 15;
MyParser.RULE_expression = 16;
MyParser.RULE_simpleExpression = 17;
MyParser.RULE_term = 18;
MyParser.RULE_factor = 19;
MyParser.RULE_unary = 20;
MyParser.RULE_subExpression = 21;
MyParser.RULE_allocationExpression = 22;
MyParser.RULE_arrayAllocationExpression = 23;
MyParser.RULE_arrayLookup = 24;
MyParser.RULE_functionCall = 25;
MyParser.RULE_actualParams = 26;


function ProgramContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = MyParser.RULE_program;
    return this;
}

ProgramContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ProgramContext.prototype.constructor = ProgramContext;

ProgramContext.prototype.statement = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(StatementContext);
    } else {
        return this.getTypedRuleContext(StatementContext,i);
    }
};

ProgramContext.prototype.enterRule = function(listener) {
    if(listener instanceof MyParserListener ) {
        listener.enterProgram(this);
	}
};

ProgramContext.prototype.exitRule = function(listener) {
    if(listener instanceof MyParserListener ) {
        listener.exitProgram(this);
	}
};

ProgramContext.prototype.accept = function(visitor) {
    if ( visitor instanceof MyParserVisitor ) {
        return visitor.visitProgram(this);
    } else {
        return visitor.visitChildren(this);
    }
};




MyParser.ProgramContext = ProgramContext;

MyParser.prototype.program = function() {

    var localctx = new ProgramContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, MyParser.RULE_program);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 57;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << MyParser.LeftCurlyBracket) | (1 << MyParser.While) | (1 << MyParser.If) | (1 << MyParser.Class) | (1 << MyParser.Return) | (1 << MyParser.Print) | (1 << MyParser.SimpleType) | (1 << MyParser.ArrayType) | (1 << MyParser.Identifier))) !== 0)) {
            this.state = 54;
            this.statement();
            this.state = 59;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function StatementContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = MyParser.RULE_statement;
    return this;
}

StatementContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
StatementContext.prototype.constructor = StatementContext;

StatementContext.prototype.variableDeclaration = function() {
    return this.getTypedRuleContext(VariableDeclarationContext,0);
};

StatementContext.prototype.Semicolon = function() {
    return this.getToken(MyParser.Semicolon, 0);
};

StatementContext.prototype.classDeclaration = function() {
    return this.getTypedRuleContext(ClassDeclarationContext,0);
};

StatementContext.prototype.assignment = function() {
    return this.getTypedRuleContext(AssignmentContext,0);
};

StatementContext.prototype.arrayAssignment = function() {
    return this.getTypedRuleContext(ArrayAssignmentContext,0);
};

StatementContext.prototype.printStatement = function() {
    return this.getTypedRuleContext(PrintStatementContext,0);
};

StatementContext.prototype.ifStatement = function() {
    return this.getTypedRuleContext(IfStatementContext,0);
};

StatementContext.prototype.whileStatement = function() {
    return this.getTypedRuleContext(WhileStatementContext,0);
};

StatementContext.prototype.returnStatement = function() {
    return this.getTypedRuleContext(ReturnStatementContext,0);
};

StatementContext.prototype.functionDeclaration = function() {
    return this.getTypedRuleContext(FunctionDeclarationContext,0);
};

StatementContext.prototype.block = function() {
    return this.getTypedRuleContext(BlockContext,0);
};

StatementContext.prototype.enterRule = function(listener) {
    if(listener instanceof MyParserListener ) {
        listener.enterStatement(this);
	}
};

StatementContext.prototype.exitRule = function(listener) {
    if(listener instanceof MyParserListener ) {
        listener.exitStatement(this);
	}
};

StatementContext.prototype.accept = function(visitor) {
    if ( visitor instanceof MyParserVisitor ) {
        return visitor.visitStatement(this);
    } else {
        return visitor.visitChildren(this);
    }
};




MyParser.StatementContext = StatementContext;

MyParser.prototype.statement = function() {

    var localctx = new StatementContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, MyParser.RULE_statement);
    try {
        this.state = 82;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,1,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 60;
            this.variableDeclaration();
            this.state = 61;
            this.match(MyParser.Semicolon);
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 63;
            this.classDeclaration();
            this.state = 64;
            this.match(MyParser.Semicolon);
            break;

        case 3:
            this.enterOuterAlt(localctx, 3);
            this.state = 66;
            this.assignment();
            this.state = 67;
            this.match(MyParser.Semicolon);
            break;

        case 4:
            this.enterOuterAlt(localctx, 4);
            this.state = 69;
            this.arrayAssignment();
            this.state = 70;
            this.match(MyParser.Semicolon);
            break;

        case 5:
            this.enterOuterAlt(localctx, 5);
            this.state = 72;
            this.printStatement();
            this.state = 73;
            this.match(MyParser.Semicolon);
            break;

        case 6:
            this.enterOuterAlt(localctx, 6);
            this.state = 75;
            this.ifStatement();
            break;

        case 7:
            this.enterOuterAlt(localctx, 7);
            this.state = 76;
            this.whileStatement();
            break;

        case 8:
            this.enterOuterAlt(localctx, 8);
            this.state = 77;
            this.returnStatement();
            this.state = 78;
            this.match(MyParser.Semicolon);
            break;

        case 9:
            this.enterOuterAlt(localctx, 9);
            this.state = 80;
            this.functionDeclaration();
            break;

        case 10:
            this.enterOuterAlt(localctx, 10);
            this.state = 81;
            this.block();
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function BlockContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = MyParser.RULE_block;
    return this;
}

BlockContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
BlockContext.prototype.constructor = BlockContext;

BlockContext.prototype.LeftCurlyBracket = function() {
    return this.getToken(MyParser.LeftCurlyBracket, 0);
};

BlockContext.prototype.RightCurlyBracket = function() {
    return this.getToken(MyParser.RightCurlyBracket, 0);
};

BlockContext.prototype.statement = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(StatementContext);
    } else {
        return this.getTypedRuleContext(StatementContext,i);
    }
};

BlockContext.prototype.enterRule = function(listener) {
    if(listener instanceof MyParserListener ) {
        listener.enterBlock(this);
	}
};

BlockContext.prototype.exitRule = function(listener) {
    if(listener instanceof MyParserListener ) {
        listener.exitBlock(this);
	}
};

BlockContext.prototype.accept = function(visitor) {
    if ( visitor instanceof MyParserVisitor ) {
        return visitor.visitBlock(this);
    } else {
        return visitor.visitChildren(this);
    }
};




MyParser.BlockContext = BlockContext;

MyParser.prototype.block = function() {

    var localctx = new BlockContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, MyParser.RULE_block);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 84;
        this.match(MyParser.LeftCurlyBracket);
        this.state = 88;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << MyParser.LeftCurlyBracket) | (1 << MyParser.While) | (1 << MyParser.If) | (1 << MyParser.Class) | (1 << MyParser.Return) | (1 << MyParser.Print) | (1 << MyParser.SimpleType) | (1 << MyParser.ArrayType) | (1 << MyParser.Identifier))) !== 0)) {
            this.state = 85;
            this.statement();
            this.state = 90;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 91;
        this.match(MyParser.RightCurlyBracket);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function FunctionDeclarationContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = MyParser.RULE_functionDeclaration;
    return this;
}

FunctionDeclarationContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
FunctionDeclarationContext.prototype.constructor = FunctionDeclarationContext;

FunctionDeclarationContext.prototype.type = function() {
    return this.getTypedRuleContext(TypeContext,0);
};

FunctionDeclarationContext.prototype.Identifier = function() {
    return this.getToken(MyParser.Identifier, 0);
};

FunctionDeclarationContext.prototype.LeftParenthesis = function() {
    return this.getToken(MyParser.LeftParenthesis, 0);
};

FunctionDeclarationContext.prototype.RightParenthesis = function() {
    return this.getToken(MyParser.RightParenthesis, 0);
};

FunctionDeclarationContext.prototype.block = function() {
    return this.getTypedRuleContext(BlockContext,0);
};

FunctionDeclarationContext.prototype.formalParams = function() {
    return this.getTypedRuleContext(FormalParamsContext,0);
};

FunctionDeclarationContext.prototype.enterRule = function(listener) {
    if(listener instanceof MyParserListener ) {
        listener.enterFunctionDeclaration(this);
	}
};

FunctionDeclarationContext.prototype.exitRule = function(listener) {
    if(listener instanceof MyParserListener ) {
        listener.exitFunctionDeclaration(this);
	}
};

FunctionDeclarationContext.prototype.accept = function(visitor) {
    if ( visitor instanceof MyParserVisitor ) {
        return visitor.visitFunctionDeclaration(this);
    } else {
        return visitor.visitChildren(this);
    }
};




MyParser.FunctionDeclarationContext = FunctionDeclarationContext;

MyParser.prototype.functionDeclaration = function() {

    var localctx = new FunctionDeclarationContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, MyParser.RULE_functionDeclaration);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 93;
        this.type();
        this.state = 94;
        this.match(MyParser.Identifier);
        this.state = 95;
        this.match(MyParser.LeftParenthesis);
        this.state = 97;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << MyParser.SimpleType) | (1 << MyParser.ArrayType) | (1 << MyParser.Identifier))) !== 0)) {
            this.state = 96;
            this.formalParams();
        }

        this.state = 99;
        this.match(MyParser.RightParenthesis);
        this.state = 100;
        this.block();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function FormalParamsContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = MyParser.RULE_formalParams;
    return this;
}

FormalParamsContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
FormalParamsContext.prototype.constructor = FormalParamsContext;

FormalParamsContext.prototype.formalParam = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(FormalParamContext);
    } else {
        return this.getTypedRuleContext(FormalParamContext,i);
    }
};

FormalParamsContext.prototype.Comma = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(MyParser.Comma);
    } else {
        return this.getToken(MyParser.Comma, i);
    }
};


FormalParamsContext.prototype.enterRule = function(listener) {
    if(listener instanceof MyParserListener ) {
        listener.enterFormalParams(this);
	}
};

FormalParamsContext.prototype.exitRule = function(listener) {
    if(listener instanceof MyParserListener ) {
        listener.exitFormalParams(this);
	}
};

FormalParamsContext.prototype.accept = function(visitor) {
    if ( visitor instanceof MyParserVisitor ) {
        return visitor.visitFormalParams(this);
    } else {
        return visitor.visitChildren(this);
    }
};




MyParser.FormalParamsContext = FormalParamsContext;

MyParser.prototype.formalParams = function() {

    var localctx = new FormalParamsContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, MyParser.RULE_formalParams);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 102;
        this.formalParam();
        this.state = 107;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===MyParser.Comma) {
            this.state = 103;
            this.match(MyParser.Comma);
            this.state = 104;
            this.formalParam();
            this.state = 109;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function FormalParamContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = MyParser.RULE_formalParam;
    return this;
}

FormalParamContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
FormalParamContext.prototype.constructor = FormalParamContext;

FormalParamContext.prototype.type = function() {
    return this.getTypedRuleContext(TypeContext,0);
};

FormalParamContext.prototype.Identifier = function() {
    return this.getToken(MyParser.Identifier, 0);
};

FormalParamContext.prototype.enterRule = function(listener) {
    if(listener instanceof MyParserListener ) {
        listener.enterFormalParam(this);
	}
};

FormalParamContext.prototype.exitRule = function(listener) {
    if(listener instanceof MyParserListener ) {
        listener.exitFormalParam(this);
	}
};

FormalParamContext.prototype.accept = function(visitor) {
    if ( visitor instanceof MyParserVisitor ) {
        return visitor.visitFormalParam(this);
    } else {
        return visitor.visitChildren(this);
    }
};




MyParser.FormalParamContext = FormalParamContext;

MyParser.prototype.formalParam = function() {

    var localctx = new FormalParamContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, MyParser.RULE_formalParam);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 110;
        this.type();
        this.state = 111;
        this.match(MyParser.Identifier);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function WhileStatementContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = MyParser.RULE_whileStatement;
    return this;
}

WhileStatementContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
WhileStatementContext.prototype.constructor = WhileStatementContext;

WhileStatementContext.prototype.While = function() {
    return this.getToken(MyParser.While, 0);
};

WhileStatementContext.prototype.LeftParenthesis = function() {
    return this.getToken(MyParser.LeftParenthesis, 0);
};

WhileStatementContext.prototype.expression = function() {
    return this.getTypedRuleContext(ExpressionContext,0);
};

WhileStatementContext.prototype.RightParenthesis = function() {
    return this.getToken(MyParser.RightParenthesis, 0);
};

WhileStatementContext.prototype.block = function() {
    return this.getTypedRuleContext(BlockContext,0);
};

WhileStatementContext.prototype.enterRule = function(listener) {
    if(listener instanceof MyParserListener ) {
        listener.enterWhileStatement(this);
	}
};

WhileStatementContext.prototype.exitRule = function(listener) {
    if(listener instanceof MyParserListener ) {
        listener.exitWhileStatement(this);
	}
};

WhileStatementContext.prototype.accept = function(visitor) {
    if ( visitor instanceof MyParserVisitor ) {
        return visitor.visitWhileStatement(this);
    } else {
        return visitor.visitChildren(this);
    }
};




MyParser.WhileStatementContext = WhileStatementContext;

MyParser.prototype.whileStatement = function() {

    var localctx = new WhileStatementContext(this, this._ctx, this.state);
    this.enterRule(localctx, 12, MyParser.RULE_whileStatement);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 113;
        this.match(MyParser.While);
        this.state = 114;
        this.match(MyParser.LeftParenthesis);
        this.state = 115;
        this.expression();
        this.state = 116;
        this.match(MyParser.RightParenthesis);
        this.state = 117;
        this.block();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function IfStatementContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = MyParser.RULE_ifStatement;
    return this;
}

IfStatementContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
IfStatementContext.prototype.constructor = IfStatementContext;

IfStatementContext.prototype.If = function() {
    return this.getToken(MyParser.If, 0);
};

IfStatementContext.prototype.LeftParenthesis = function() {
    return this.getToken(MyParser.LeftParenthesis, 0);
};

IfStatementContext.prototype.expression = function() {
    return this.getTypedRuleContext(ExpressionContext,0);
};

IfStatementContext.prototype.RightParenthesis = function() {
    return this.getToken(MyParser.RightParenthesis, 0);
};

IfStatementContext.prototype.block = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(BlockContext);
    } else {
        return this.getTypedRuleContext(BlockContext,i);
    }
};

IfStatementContext.prototype.Else = function() {
    return this.getToken(MyParser.Else, 0);
};

IfStatementContext.prototype.enterRule = function(listener) {
    if(listener instanceof MyParserListener ) {
        listener.enterIfStatement(this);
	}
};

IfStatementContext.prototype.exitRule = function(listener) {
    if(listener instanceof MyParserListener ) {
        listener.exitIfStatement(this);
	}
};

IfStatementContext.prototype.accept = function(visitor) {
    if ( visitor instanceof MyParserVisitor ) {
        return visitor.visitIfStatement(this);
    } else {
        return visitor.visitChildren(this);
    }
};




MyParser.IfStatementContext = IfStatementContext;

MyParser.prototype.ifStatement = function() {

    var localctx = new IfStatementContext(this, this._ctx, this.state);
    this.enterRule(localctx, 14, MyParser.RULE_ifStatement);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 119;
        this.match(MyParser.If);
        this.state = 120;
        this.match(MyParser.LeftParenthesis);
        this.state = 121;
        this.expression();
        this.state = 122;
        this.match(MyParser.RightParenthesis);
        this.state = 123;
        this.block();
        this.state = 126;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===MyParser.Else) {
            this.state = 124;
            this.match(MyParser.Else);
            this.state = 125;
            this.block();
        }

    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function ReturnStatementContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = MyParser.RULE_returnStatement;
    return this;
}

ReturnStatementContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ReturnStatementContext.prototype.constructor = ReturnStatementContext;

ReturnStatementContext.prototype.Return = function() {
    return this.getToken(MyParser.Return, 0);
};

ReturnStatementContext.prototype.expression = function() {
    return this.getTypedRuleContext(ExpressionContext,0);
};

ReturnStatementContext.prototype.enterRule = function(listener) {
    if(listener instanceof MyParserListener ) {
        listener.enterReturnStatement(this);
	}
};

ReturnStatementContext.prototype.exitRule = function(listener) {
    if(listener instanceof MyParserListener ) {
        listener.exitReturnStatement(this);
	}
};

ReturnStatementContext.prototype.accept = function(visitor) {
    if ( visitor instanceof MyParserVisitor ) {
        return visitor.visitReturnStatement(this);
    } else {
        return visitor.visitChildren(this);
    }
};




MyParser.ReturnStatementContext = ReturnStatementContext;

MyParser.prototype.returnStatement = function() {

    var localctx = new ReturnStatementContext(this, this._ctx, this.state);
    this.enterRule(localctx, 16, MyParser.RULE_returnStatement);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 128;
        this.match(MyParser.Return);
        this.state = 129;
        this.expression();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function PrintStatementContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = MyParser.RULE_printStatement;
    return this;
}

PrintStatementContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
PrintStatementContext.prototype.constructor = PrintStatementContext;

PrintStatementContext.prototype.Print = function() {
    return this.getToken(MyParser.Print, 0);
};

PrintStatementContext.prototype.expression = function() {
    return this.getTypedRuleContext(ExpressionContext,0);
};

PrintStatementContext.prototype.enterRule = function(listener) {
    if(listener instanceof MyParserListener ) {
        listener.enterPrintStatement(this);
	}
};

PrintStatementContext.prototype.exitRule = function(listener) {
    if(listener instanceof MyParserListener ) {
        listener.exitPrintStatement(this);
	}
};

PrintStatementContext.prototype.accept = function(visitor) {
    if ( visitor instanceof MyParserVisitor ) {
        return visitor.visitPrintStatement(this);
    } else {
        return visitor.visitChildren(this);
    }
};




MyParser.PrintStatementContext = PrintStatementContext;

MyParser.prototype.printStatement = function() {

    var localctx = new PrintStatementContext(this, this._ctx, this.state);
    this.enterRule(localctx, 18, MyParser.RULE_printStatement);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 131;
        this.match(MyParser.Print);
        this.state = 132;
        this.expression();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function ClassDeclarationContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = MyParser.RULE_classDeclaration;
    return this;
}

ClassDeclarationContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ClassDeclarationContext.prototype.constructor = ClassDeclarationContext;

ClassDeclarationContext.prototype.Class = function() {
    return this.getToken(MyParser.Class, 0);
};

ClassDeclarationContext.prototype.Identifier = function() {
    return this.getToken(MyParser.Identifier, 0);
};

ClassDeclarationContext.prototype.LeftCurlyBracket = function() {
    return this.getToken(MyParser.LeftCurlyBracket, 0);
};

ClassDeclarationContext.prototype.RightCurlyBracket = function() {
    return this.getToken(MyParser.RightCurlyBracket, 0);
};

ClassDeclarationContext.prototype.classVariableDeclaration = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ClassVariableDeclarationContext);
    } else {
        return this.getTypedRuleContext(ClassVariableDeclarationContext,i);
    }
};

ClassDeclarationContext.prototype.enterRule = function(listener) {
    if(listener instanceof MyParserListener ) {
        listener.enterClassDeclaration(this);
	}
};

ClassDeclarationContext.prototype.exitRule = function(listener) {
    if(listener instanceof MyParserListener ) {
        listener.exitClassDeclaration(this);
	}
};
